# energy-optimiser

./: .gitignore  CLAUDE.md  DEPLOY.md  Dockerfile  INVESTIGATION-evening-slot-skip.md  KNOWN-ISSUES.md  OPEN-WORK.md  PLAN-3.3.md  PLAN-MODE2-ADAPTIVE.md  PLAN-MODE2-CUTOFF.md  README.md  SIGENERGY-MODES.md  SPEC-ENERGY-01.md  TERMINAL-VALUE-PLAN.md  config.example.toml  docker-compose.yml  energy-optimiser.service  pyproject.toml
src/optimiser/: __init__.py  __main__.py  config.py  curtailment.py  hardware.py  logging_utils.py  modes.py  probe_charge_cutoff.py  probe_mode4.py  probe_mode5.py  probe_mode6.py  probe_no_cutoff.py  probe_two_phase.py  probe_uncapped_pv.py  profiler.py  replay.py  replay_cli.py  service.py  simulate.py  simulate_cli.py  simulate_sweep.py  smoke.py  state_machine.py  store.py  terminal_value_data.py  terminal_value_data_cli.py  time_utils.py  types.py  validation.py  wake_loop.py  watchdog.py
tests/: conftest.py  test_amber_current_slot.py  test_amber_horizon_alert.py  test_amber_swagger.py  test_amber_usage.py  test_api.py  test_api_ops.py  test_bom_parser.py  test_config.py  test_curtailment.py  test_data_integrity.py  test_lp_compound_scenarios.py  test_lp_hw_scheduling.py  test_lp_integration.py  test_lp_modes.py  test_lp_multitick_soc.py  test_lp_properties.py  test_lp_scaffolding.py  test_lp_scenarios.py  test_lp_stochastic.py  test_lp_watcher.py  test_modes.py  test_modes_api.py  test_ops_instrumentation.py  test_price_band_calibration.py  test_price_forecast_log.py  test_profiler.py  test_pv_forecast_log.py  test_replay_modes.py  test_replay_reconstruct.py  test_retry.py  test_service_lp.py  test_service_modes.py  test_service_stale_price_export_guard.py  test_sigenergy_apply_dispatch.py  test_sigenergy_read_state.py  test_simulate.py  test_snapshot_adapter.py  test_snapshot_writer.py  test_sse_broadcaster.py  (+6 more)
(+55 files in other folders)
